--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,9 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+body {
+  background-image: url('./images/blue_space.jpg'); 
+  /* font-family: 'Jockey One', sans-serif; */
 }
