Score component built and showing up.

--- a/src/containers/Tandem/Tandem.css
+++ b/src/containers/Tandem/Tandem.css
@@ -1,7 +1,7 @@
-.question-div {
+/* .question-div {
     display: flex; 
     justify-content: center;
     align-items: center; 
     width: 100vw; 
     height: 25vh; 
-}
+} */
