--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -24,14 +24,39 @@ p {
 
 section {
     text-align: center; 
-    margin-top: 5vh; 
+    margin-top: 4vh; 
 }
 
 .play-button {
+    text-transform: uppercase; 
     height: 8vh; 
     width: 8vw; 
-    font-size: 20px; 
+    font-size: 15px; 
     border-radius: 5px; 
+    transition: all 0.5s; 
 }
 
+.play-button span {
+    cursor: pointer; 
+    display: inline-block; 
+    position: relative; 
+    transition: 0.5s; 
+}
 
+.play-button span:after {
+    content: '\00bb';
+    position: absolute; 
+    opacity: 0; 
+    top: 0; 
+    right: -20px; 
+    transition: 0.5s; 
+}
+
+.play-button:hover span {
+    padding-right: 25px; 
+}
+
+.play-button:hover span:after {
+    opacity: 1; 
+    right: 0; 
+}
