--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
 body {
   background-image: url('./images/jeopardy_background.jpg'); 
+  background-repeat: no-repeat;
+  background-size: cover; 
+  -webkit-background-size: cover; 
 }
