--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,3 +1,7 @@
+/***************************************************************************************************************************************
+MAIN
+*/
+
 * {
     margin: 0; 
 }
@@ -27,10 +31,14 @@ section {
     margin-top: 4vh; 
 }
 
+/***************************************************************************************************************************************
+PLAY BUTTON
+*/
+
 .play-button {
     text-transform: uppercase; 
     height: 8vh; 
-    width: 8vw; 
+    width: 15vw; 
     font-size: 15px; 
     border-radius: 5px; 
     transition: all 0.5s; 
@@ -59,4 +67,31 @@ section {
 .play-button:hover span:after {
     opacity: 1; 
     right: 0; 
+}
+
+/***************************************************************************************************************************************
+MEDIA QUERY
+*/
+
+@media (max-width: 414px) {
+    a {
+        text-decoration: none;
+    }
+    .main-container{
+        margin: 0; 
+        max-height: 100vh; 
+    }
+    header {
+        padding-top: 27vh; 
+    }
+    .sub-header {
+        padding: 2vh 0 2vh 0; 
+    }
+    .play-button-section {
+        padding-top: 25vh; 
+    }
+    .play-button {
+        width: 78vw;
+        height: 10vh;  
+    }
 }
