--- a/src/containers/Categories/Categories.css
+++ b/src/containers/Categories/Categories.css
@@ -3,3 +3,13 @@ h2 {
     font-size: 100px; 
     color: #EAE9E9; 
 }
+
+@media (max-width: 414px) {
+    .pick-category {
+        /* font-size: 42px;  */
+        font-size: 70px; 
+    }
+    .category-btn {
+        width: 65vw; 
+    }
+}
