--- a/src/containers/Categories/Categories.css
+++ b/src/containers/Categories/Categories.css
@@ -9,7 +9,10 @@ h2 {
         /* font-size: 42px;  */
         font-size: 70px; 
     }
+    .category-container {
+        padding-top: 8vh; 
+    }
     .category-btn {
-        width: 65vw; 
+        width: 65vw;
     }
 }
