Buttons showing up empty... fixed?

--- a/src/components/Component.css
+++ b/src/components/Component.css
@@ -108,6 +108,7 @@ SCORE COMPONENT
     }
     button {
         font-size: 16px; 
+        background-color: white;
     }
     .score-div{
         padding-top: 2vh; 
