--- a/src/containers/Categories/Categories.css
+++ b/src/containers/Categories/Categories.css
@@ -1,8 +1,16 @@
+/***************************************************************************************************************************************
+MAIN
+*/
+
 h2 {
     font-family: 'Jockey One', sans-serif;
     font-size: 100px; 
     color: #EAE9E9; 
 }
+
+/***************************************************************************************************************************************
+MEDIA QUERY
+*/
 
 @media (max-width: 414px) {
     .pick-category {
